# spbu_2020_c_homeworks

./: CMakeLists.txt
homework1/: task1.c  task2.c  task3.c  task4.c  task5.c
homework2/: task1.c  task2.c  task3.c  task4.c  task5.c
homework3/: task1.c  task2.c
homework4/: task1.c  task3.c
homework5/: task1.c  task2.c
homework6/: task1.c
homework7/: input.txt  task1.c  task2.c
homework8/: task1.c
homework9/: task1.c
test1/: task1.c  task2.c
test2/: input.txt  task1.c  task2.c  task3.c
test3/: task1.c  task2.c  task3.c
